finalized and tested Users and Profile API functionality. Next the other paths.
