# app/Http/Controllers/UserController.php
@@ -17,7 +17,8 @@ class UserController extends Controller
 {
     /**
      * @OA\Get(path="/users",
-     *  security={{ "bearerAuth":{} }},      
+     *      security={{"bearerAuth":{}}},
+     *      tags={"Users"},
      *  @OA\Response(
      *      response=200,
      *      description="User Collection"
@@ -32,10 +33,9 @@ class UserController extends Controller
      *  ),
      * )
      */
-
     public function index()
     {
-        Gate::authorize('view', 'users');
+        Gate::authorize('view', "Users");
 
         $users = User::paginate();
         return UserResource::collection($users);
@@ -43,7 +43,8 @@ class UserController extends Controller
 
     /**
      * @OA\Get(path="/users/{id}",
-     *  security={{ "bearerAuth":{} }},      
+     *      security={{"bearerAuth":{}}},
+     *      tags={"Users"},
      *  @OA\Response(
      *      response=200,
      *      description="User"
@@ -61,7 +62,7 @@ class UserController extends Controller
      */
     public function show($id)
     {
-        Gate::authorize('view', 'users');
+        Gate::authorize('view', "Users");
 
         $user = User::find($id);
 
@@ -70,11 +71,12 @@ class UserController extends Controller
 
     /**
      * @OA\Post(
-     *  path="/users",
-     *  security={{ "bearerAuth":{} }},      
+     *      path="/users",
+     *      security={{"bearerAuth":{}}},
+     *      tags={"Users"},
      *      @OA\Response(
-     *          response=200,
-     *          description="User"
+     *          response=201,
+     *          description="User Create"
      *      ),
      *      @OA\RequestBody(
      *          required=true,
@@ -86,35 +88,92 @@ class UserController extends Controller
      */
     public function store(UserCreateRequest $request)
     {
-        Gate::authorize('edit', 'users');
+        Gate::authorize('edit', "Users");
 
         // No password because the admin will create user
         // and afterwards the user will be able to change it
         $user = User::create(
             $request->only('first_name', 'last_name', 'email', 'role_id')
-                + ['password' => Hash::make(123)]
+            + ['password' => Hash::make(123)]
         );
 
         return response(new UserResource($user), Response::HTTP_CREATED);
     }
 
+    /**
+     * @OA\Put(
+     *      path="/users/{id}",
+     *      security={{"bearerAuth":{}}},
+     *      tags={"Users"},
+     *      @OA\Response(
+     *          response=202,
+     *          description="User Update"
+     *      ),
+     *     @OA\Parameter(
+     *      name="id",
+     *      description="User ID",
+     *      in="path",
+     *      required=true,
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              ref="#/components/schemas/UserUpdateRequest"
+     *          )
+     *      )
+     *  )
+     */
     public function update(UserUpdateRequest $request, $id)
     {
-        Gate::authorize('edit', 'users');
+        Gate::authorize('edit', "Users");
 
         $user = User::find($id);
         $user->update($request->only('first_name', 'last_name', 'email', 'role_id'));
         return response(new UserResource($user), Response::HTTP_ACCEPTED);
     }
 
+    /**
+     * @OA\Delete(
+     *      path="/users/{id}",
+     *      security={{"bearerAuth":{}}},
+     *      tags={"Users"},
+     *  @OA\Response(
+     *      response=204,
+     *      description="User Delete"
+     *  ),
+     *  @OA\Parameter(
+     *      name="id",
+     *      description="User ID",
+     *      in="path",
+     *      required=true,
+     *      @OA\Schema(
+     *          type="integer"
+     *      ),
+     *  ),
+     * )
+     */
     public function destroy($id)
     {
-        Gate::authorize('edit', 'users');
+        Gate::authorize('edit', "Users");
 
         User::destroy($id);
         return response(null, Response::HTTP_NO_CONTENT);
     }
 
+    /**
+     * @OA\Get(
+     *      path="/user",
+     *      security={{"bearerAuth":{}}},
+     *      tags={"Profile"},
+     *  @OA\Response(
+     *      response=200,
+     *      description="Authenticated User"
+     *  )
+     * )
+     */
     public function user()
     {
         $user = Auth::user();
@@ -125,6 +184,23 @@ class UserController extends Controller
         ]);
     }
 
+    /**
+     * @OA\Put(
+     *      path="/users/info",
+     *      security={{"bearerAuth":{}}},
+     *      tags={"Profile"},
+     *      @OA\Response(
+     *          response=202,
+     *          description="User Info Update"
+     *      ),
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              ref="#/components/schemas/UpdateInfoRequest"
+     *          )
+     *      )
+     *  )
+     */
     public function updateInfo(UpdateInfoRequest $request)
     {
         $user = Auth::user();
@@ -132,6 +208,23 @@ class UserController extends Controller
         return response(new UserResource($user), Response::HTTP_ACCEPTED);
     }
 
+    /**
+     * @OA\Put(
+     *      path="/users/password",
+     *      security={{"bearerAuth":{}}},
+     *      tags={"Profile"},
+     *      @OA\Response(
+     *          response=202,
+     *          description="User Password Update"
+     *      ),
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              ref="#/components/schemas/UpdatePasswordRequest"
+     *          )
+     *      )
+     *  )
+     */
     public function updatePassword(UpdatePasswordRequest $request)
     {
         $user = Auth::user();
